--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>mclust-org: R packages for Gaussian mixture modelling</title>
 <!-- favicons -->
-<link rel="icon" type="image/png" sizes="16x16" href="figures/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="figures/favicon-32x32.png">
-<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="figures/apple-touch-icon.png">
-<link rel="apple-touch-icon" type="image/png" sizes="120x120" href="figures/apple-touch-icon-120x120.png">
-<link rel="apple-touch-icon" type="image/png" sizes="76x76" href="figures/apple-touch-icon-76x76.png">
-<link rel="apple-touch-icon" type="image/png" sizes="60x60" href="figures/apple-touch-icon-60x60.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="images/apple-touch-icon.png">
+<link rel="apple-touch-icon" type="image/png" sizes="120x120" href="images/apple-touch-icon-120x120.png">
+<link rel="apple-touch-icon" type="image/png" sizes="76x76" href="images/apple-touch-icon-76x76.png">
+<link rel="apple-touch-icon" type="image/png" sizes="60x60" href="images/apple-touch-icon-60x60.png">
 <!-- jquery -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <!-- Bootstrap -->
@@ -69,6 +69,13 @@
       </ul>
       </li>
       </ul>
+      <ul class="nav navbar-nav navbar-right">
+      <li>
+      <a href="https://www.r-project.org">
+        <img src="images/Rlogo.png" alt="R" width="28" height="24">
+      </a>
+      </li>
+      </ul>
     </div>
 <!--/.container -->
 </div>
@@ -82,14 +89,18 @@
 <h1>mclust-org</h1>
 </div>
 
+<p>
+A repository of <a href="https://www.r-project.org/">R</a> packages for statistical modelling using Gaussian finite mixtures.
+</p>
+
 <div class="slider-wrapper">
 	<div id="slider" class="nivoSlider">
-		<img src="figures/fig01.png" alt="" />
-		<img src="figures/fig02.png" alt="" />
-		<img src="figures/fig03.png" alt="" />
-		<img src="figures/fig04.png" alt="" />
-		<img src="figures/fig05.png" alt="" />
-		<img src="figures/fig06.png" alt="" />
+		<img src="images/fig01.png" alt="" />
+		<img src="images/fig02.png" alt="" />
+		<img src="images/fig03.png" alt="" />
+		<img src="images/fig04.png" alt="" />
+		<img src="images/fig05.png" alt="" />
+		<img src="images/fig06.png" alt="" />
 	</div>
 </div>
 
