--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 </div>
 
 <p>
-A repository of <a href="https://www.r-project.org/">R</a> packages for statistical modelling using Gaussian finite mixtures.
+A repository of <a href="https://www.r-project.org/">R</a> packages for statistical clustering, classification, and density estimation, using Gaussian finite mixture models.
 </p>
 
 <div class="slider-wrapper">
@@ -107,7 +107,7 @@ A repository of <a href="https://www.r-project.org/">R</a> packages for statisti
 </div>
 
 <footer>
-<p>Website by Luca Scrucca | Last modified: Dec 2018 </p>
+<p>Website design by Luca Scrucca | Last modified: Dec 2018 </p>
 </footer>
 </div>
 
