--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
         <li>
         <a href="clustvarsel/index.html">clustvarsel</a>
         </li>
+        <li>
+        <a href="msir/index.html">msir</a>
+        </li>
       </ul>
       </li>
       </ul>
