--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
       </a>
       <ul class="dropdown-menu" role="menu">
         <li>
-        <a href="mclust/">mclust</a>
+        <a href="mclust/index.html">mclust</a>
         </li>
         <li>
-        <a href="clustvarsel/">clustvarsel</a>
+        <a href="clustvarsel/index.html">clustvarsel</a>
         </li>
         <li>
-        <a href="msir/">msir</a>
+        <a href="msir/index.html">msir</a>
         </li>
       </ul>
       </li>
