--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <a href="clustvarsel/index.html">clustvarsel</a>
         </li>
         <li>
-        <a href="msir/index.html">msir</a>
+        <a href="msir/index.html">msir2</a>
         </li>
       </ul>
       </li>
