--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
       </a>
       <ul class="dropdown-menu" role="menu">
         <li>
-        <a href="mclust/index.html">mclust</a>
+        <a href="./mclust">mclust</a>
         </li>
         <li>
-        <a href="clustvarsel/index.html">clustvarsel</a>
+        <a href="./clustvarsel">clustvarsel</a>
         </li>
         <li>
-        <a href="msir/index.html">msir2</a>
+        <a href="./msir">msir</a>
         </li>
       </ul>
       </li>
