--- a/mclust/authors.html
+++ b/mclust/authors.html
@@ -136,7 +136,7 @@
         </p>
       </li>
       <li>
-        <p><strong>Adrian E. Raftery</strong>. Author. 
+        <p><strong>Adrian E. Raftery</strong>. Author. <a href='https://orcid.org/0000-0002-6589-301X' target='orcid.widget'><img src='https://members.orcid.org/sites/default/files/vector_iD_icon.svg' class='orcid' alt='ORCID' height='16'></a>
         </p>
       </li>
       <li>
