--- a/mclust/index.html
+++ b/mclust/index.html
@@ -127,7 +127,7 @@
 <h2>Developers</h2>
 <ul class="list-unstyled">
 <li>Chris Fraley <br><small class="roles"> Author </small>  </li>
-<li>Adrian E. Raftery <br><small class="roles"> Author </small>  </li>
+<li>Adrian E. Raftery <br><small class="roles"> Author </small> <a href="https://orcid.org/0000-0002-6589-301X" target="orcid.widget"><img src="https://members.orcid.org/sites/default/files/vector_iD_icon.svg" class="orcid" alt="ORCID" height="16"></a> </li>
 <li>
 <a href="http://www.stat.unipg.it/luca">Luca Scrucca</a> <br><small class="roles"> Author, maintainer </small> <a href="https://orcid.org/0000-0003-3826-0484" target="orcid.widget"><img src="https://members.orcid.org/sites/default/files/vector_iD_icon.svg" class="orcid" alt="ORCID" height="16"></a> </li>
 <li><a href="authors.html">All authors...</a></li>
