--- a/msir/index.html
+++ b/msir/index.html
@@ -127,8 +127,9 @@
   <div class="dev-status">
 <h2>Dev status</h2>
 <ul class="list-unstyled">
-<li><a href="https://cran.r-project.org/package=msir"><img src="http://www.r-pkg.org/badges/version/msir" alt="CRAN_Status_Badge"></a></li>
+<li><a href="https://cran.r-project.org/package=msir"><img src="http://www.r-pkg.org/badges/version/msir" alt="CRAN_Status"></a></li>
 <li><a href="https://cran.r-project.org/package=msir"><img src="http://cranlogs.r-pkg.org/badges/msir" alt="CRAN_MonthlyDownloads"></a></li>
+<li><a href="https://cran.R-project.org/package=mclust"><img src="https://tinyverse.netlify.com/badge/msir" alt="CRAN_dependencies"></a></li>
 </ul>
 </div>
 </div>
