--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
         <a href="./clustvarsel/index.html">clustvarsel</a>
         </li>
         <li>
+        <a href="./ppgmmga/index.html">ppgmmga</a>
+        </li>
+        <li>
         <a href="./msir/index.html">msir</a>
         </li>
       </ul>
@@ -112,7 +115,7 @@ A repository of <a href="https://www.r-project.org/">R</a> packages for statisti
 </div>
 
 <footer>
-<p>Website design by Luca Scrucca | Last modified: Jan 2019 </p>
+<p>Website design by Luca Scrucca | Last modified: May 2019 </p>
 </footer>
 </div>
 
