--- a/ppgmmga/index.html
+++ b/ppgmmga/index.html
@@ -10,7 +10,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha256-U5ZEeKfGNOja007MMD3YBI0A3OSZOQbeG6z2f2Y0hu8=" crossorigin="anonymous"></script><!-- Font Awesome icons --><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous">
 <!-- clipboard.js --><script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.4/clipboard.min.js" integrity="sha256-FiZwavyI2V6+EXO1U+xzLG3IKldpiTFf3153ea9zikQ=" crossorigin="anonymous"></script><!-- sticky kit --><script src="https://cdnjs.cloudflare.com/ajax/libs/sticky-kit/1.1.3/sticky-kit.min.js" integrity="sha256-c4Rlo1ZozqTPE2RLuvbusY3+SU1pQaJC0TjuhygMipw=" crossorigin="anonymous"></script><!-- pkgdown --><link href="pkgdown.css" rel="stylesheet">
 <script src="pkgdown.js"></script><meta property="og:title" content="Projection Pursuit Based on Gaussian Mixtures and Evolutionary Algorithms">
-<meta property="og:description" content="Projection Pursuit (PP) algorithm for dimension reduction based on Gaussian Mixture Models (GMMs) for density estimation using Genetic Algorithms (GAs) to maximise an approximated negentropy index.">
+<meta property="og:description" content="Projection Pursuit (PP) algorithm for dimension reduction based 
+    on Gaussian Mixture Models (GMMs) for density estimation using Genetic 
+    Algorithms (GAs) to maximise an approximated negentropy index. 
+    See Scrucca and Serafini (2019) &lt;doi:10.1080/10618600.2019.1598871&gt;">
 <meta name="twitter:card" content="summary">
 <!-- mathjax --><script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js" integrity="sha256-nvJJv9wWKEm88qvoQl9ekL2J+k/RWIsaSScxxlsrv8k=" crossorigin="anonymous"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/config/TeX-AMS-MML_HTMLorMML.js" integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="anonymous"></script><!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -30,7 +33,7 @@
       </button>
       <span class="navbar-brand">
         <a class="navbar-link" href="index.html">ppgmmga</a>
-        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">1.0.2</span>
+        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">1.2</span>
       </span>
     </div>
 
@@ -89,7 +92,7 @@ devtools::install_github("luca-scr/ppgmmga", build = TRUE, build_opts = c("--no-
 <div id="references" class="section level2">
 <h2 class="hasAnchor">
 <a href="#references" class="anchor"></a>References</h2>
-<p>Scrucca, L. and Serafini, A. (2019). Projection pursuit based on Gaussian mixtures and evolutionary algorithms. <em>Journal of Computational and Graphical Statistics</em> DOI: 10.1080/10618600.2019.1598871 URL <a href="https://doi.org/10.1080/10618600.2019.1598871" class="uri">https://doi.org/10.1080/10618600.2019.1598871</a></p>
+<p>Scrucca, L. and Serafini, A. (2019) Projection pursuit based on Gaussian mixtures and evolutionary algorithms. <em>Journal of Computational and Graphical Statistics</em>, DOI: 10.1080/10618600.2019.1598871 URL <a href="https://doi.org/10.1080/10618600.2019.1598871" class="uri">https://doi.org/10.1080/10618600.2019.1598871</a></p>
 </div>
 </div>
   </div>
