--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
         <a href="./mclust/index.html">mclust</a>
         </li>
         <li>
+        <a href="./mclustAddson/index.html">mclustAddson</a>
+        </li>
+        <li>
         <a href="./clustvarsel/index.html">clustvarsel</a>
         </li>
         <li>
