--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <a href="./mclust/index.html">mclust</a>
         </li>
         <li>
-        <a href="./mclustAddson/index.html">mclustAddson</a>
+        <a href="./mclustAddons/index.html">mclustAddons</a>
         </li>
         <li>
         <a href="./clustvarsel/index.html">clustvarsel</a>
