--- a/mclustAddons/index.html
+++ b/mclustAddons/index.html
@@ -5,13 +5,13 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Addson for mclust package • mclustAddson</title>
+<title>Addons for mclust package • mclustAddons</title>
 <!-- jquery --><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script><!-- Bootstrap --><link href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.4.0/cosmo/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha256-nuL8/2cJ5NDSSwnKD8VqreErSWHtnEP9E7AySL+1ev4=" crossorigin="anonymous"></script><!-- bootstrap-toc --><link rel="stylesheet" href="bootstrap-toc.css">
 <script src="bootstrap-toc.js"></script><!-- Font Awesome icons --><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/v4-shims.min.css" integrity="sha256-wZjR52fzng1pJHwx4aV2AO3yyTOXrcDW7jBpJtTwVxw=" crossorigin="anonymous">
 <!-- clipboard.js --><script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.6/clipboard.min.js" integrity="sha256-inc5kl9MA1hkeYUt+EC3BhlIgyp/2jDIyBLS6k3UxPI=" crossorigin="anonymous"></script><!-- headroom.js --><script src="https://cdnjs.cloudflare.com/ajax/libs/headroom/0.11.0/headroom.min.js" integrity="sha256-AsUX4SJE1+yuDu5+mAVzJbuYNPHj/WroHuZ8Ir/CkE0=" crossorigin="anonymous"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/headroom/0.11.0/jQuery.headroom.min.js" integrity="sha256-ZX/yNShbjqsohH1k95liqY9Gd8uOiE1S4vZc+9KQ1K4=" crossorigin="anonymous"></script><!-- pkgdown --><link href="pkgdown.css" rel="stylesheet">
-<script src="pkgdown.js"></script><meta property="og:title" content="Addson for mclust package">
+<script src="pkgdown.js"></script><meta property="og:title" content="Addons for mclust package">
 <meta property="og:description" content="Extend the functionality of the mclust package for Gaussian finite mixture modelling by including: 
     - density estimation for data with bounded support;
     - modal clustering using modal EM algorithm for Gaussian mixtures.">
@@ -32,7 +32,7 @@
         <span class="icon-bar"></span>
       </button>
       <span class="navbar-brand">
-        <a class="navbar-link" href="index.html">mclustAddson</a>
+        <a class="navbar-link" href="index.html">mclustAddons</a>
         <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">0.4</span>
       </span>
     </div>
@@ -40,7 +40,7 @@
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
 <li>
-  <a href="articles/mclustAddson.html">Vignette</a>
+  <a href="articles/mclustAddons.html">Vignette</a>
 </li>
 <li>
   <a href="reference/index.html">Reference</a>
@@ -69,9 +69,9 @@
 
       </header><div class="row">
   <div class="contents col-md-9">
-<div id="mclustaddson" class="section level1">
+<div id="mclustaddons" class="section level1">
 <div class="page-header"><h1 class="hasAnchor">
-<a href="#mclustaddson" class="anchor"></a>mclustAddson</h1></div>
+<a href="#mclustaddons" class="anchor"></a>mclustAddons</h1></div>
 
 <p>An <a href="https://www.r-project.org/">R</a> package extending the functionality of the <a href="https://mclust-org.github.io/mclust/index.html">mclust</a> package (Scrucca et al. 2016) by including:</p>
 <ul>
@@ -81,15 +81,14 @@
 <div id="installation" class="section level2">
 <h2 class="hasAnchor">
 <a href="#installation" class="anchor"></a>Installation</h2>
-<p>You can install the released version of <strong>mclustAddson</strong> from CRAN using:</p>
-<pre class="{r}"><code><a href="https://rdrr.io/r/utils/install.packages.html">install.packages("mclustAddson")</a></code></pre>
+<p>You can install the released version of <strong>mclustAddons</strong> from CRAN using:</p>
+<pre class="{r}"><code><a href="https://rdrr.io/r/utils/install.packages.html">install.packages("mclustAddons")</a></code></pre>
 </div>
 <div id="usage" class="section level2">
 <h2 class="hasAnchor">
 <a href="#usage" class="anchor"></a>Usage</h2>
-<p>the main functions and several examples are included in the papers shown in the references section below.</p>
-<p>For an introduction to the main functions and several examples see the vignette <strong>A quick tour of mclustAddson</strong>, which is available as</p>
-<pre class="{r}"><code><a href="articles/mclustAddson.html">vignette("mclustAddson")</a></code></pre>
+<p>For an introduction to the main functions and several examples see the vignette <strong>A quick tour of mclustAddons</strong>, which is available as</p>
+<pre class="{r}"><code><a href="articles/mclustAddons.html">vignette("mclustAddons")</a></code></pre>
 <p>The vignette is also available in the <em>Vignette</em> section on the navigation bar on top of the package’s web page.</p>
 </div>
 <div id="references" class="section level2">
@@ -109,12 +108,6 @@
 <li>GPL (&gt;= 2)</li>
 </ul>
 </div>
-<div class="citation">
-<h2>Citation</h2>
-<ul class="list-unstyled">
-<li><a href="authors.html">Citing mclustAddson</a></li>
-</ul>
-</div>
 <div class="developers">
 <h2>Developers</h2>
 <ul class="list-unstyled">
@@ -126,8 +119,8 @@
   <div class="dev-status">
 <h2>Dev status</h2>
 <ul class="list-unstyled">
-<li><a href="https://cran.r-project.org/package=mclustAddson"><img src="http://www.r-pkg.org/badges/version/mclustAddson" alt="CRAN_Status_Badge"></a></li>
-<li><a href="https://cran.r-project.org/package=mclustAddson"><img src="http://cranlogs.r-pkg.org/badges/mclustAddson" alt="CRAN_MonthlyDownloads"></a></li>
+<li><a href="https://cran.r-project.org/package=mclustAddons"><img src="http://www.r-pkg.org/badges/version/mclustAddons" alt="CRAN_Status_Badge"></a></li>
+<li><a href="https://cran.r-project.org/package=mclustAddons"><img src="http://cranlogs.r-pkg.org/badges/mclustAddons" alt="CRAN_MonthlyDownloads"></a></li>
 </ul>
 </div>
 </div>
