--- a/mclustAddons/index.html
+++ b/mclustAddons/index.html
@@ -14,7 +14,7 @@
 <script src="pkgdown.js"></script><meta property="og:title" content="Addons for mclust package">
 <meta property="og:description" content="Extend the functionality of the mclust package for Gaussian finite mixture modelling by including: 
     - density estimation for data with bounded support;
-    - modal clustering using modal EM algorithm for Gaussian mixtures.">
+    - modal clustering using MEM algorithm for Gaussian mixtures.">
 <!-- mathjax --><script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js" integrity="sha256-nvJJv9wWKEm88qvoQl9ekL2J+k/RWIsaSScxxlsrv8k=" crossorigin="anonymous"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/config/TeX-AMS-MML_HTMLorMML.js" integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="anonymous"></script><!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -33,7 +33,7 @@
       </button>
       <span class="navbar-brand">
         <a class="navbar-link" href="index.html">mclustAddons</a>
-        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">0.4</span>
+        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">0.5</span>
       </span>
     </div>
 
@@ -52,7 +52,7 @@
 <ul class="nav navbar-nav navbar-right">
 <li>
   <a href="https://mclust-org.github.io">
-    <span class="fas fa-home"></span>
+    <span class="fa fa-home"></span>
      
     mclust-org
   </a>
@@ -90,13 +90,14 @@
 <p>For an introduction to the main functions and several examples see the vignette <strong>A quick tour of mclustAddons</strong>, which is available as</p>
 <pre class="{r}"><code><a href="articles/mclustAddons.html">vignette("mclustAddons")</a></code></pre>
 <p>The vignette is also available in the <em>Vignette</em> section on the navigation bar on top of the package’s web page.</p>
+<p><br><br></p>
 </div>
 <div id="references" class="section level2">
 <h2 class="hasAnchor">
 <a href="#references" class="anchor"></a>References</h2>
-<p>Scrucca L., Fop M., Murphy T. B. and Raftery A. E. (2016) mclust 5: clustering, classification and density estimation using Gaussian finite mixture models, <em>The R Journal</em>, 8/1, pp. 205-233.</p>
-<p>Scrucca L. (2019) A transformation-based approach to Gaussian mixture density estimation for bounded data, <em>Biometrical Journal</em> 61:4, 873–888.</p>
-<p>Scrucca L. (2021) A fast and efficient Modal EM algorithm for Gaussian mixtures. To appear in <em>Statistical Analysis and Data Mining</em>.</p>
+<p>Scrucca L., Fop M., Murphy T. B. and Raftery A. E. (2016) mclust 5: clustering, classification and density estimation using Gaussian finite mixture models, <em>The R Journal</em>, 8/1, 205-233. <a href="https://doi.org/10.32614/RJ-2016-021" class="uri">https://doi.org/10.32614/RJ-2016-021</a></p>
+<p>Scrucca L. (2019) A transformation-based approach to Gaussian mixture density estimation for bounded data, <em>Biometrical Journal</em>, 61:4, 873–888. <a href="https://doi.org/10.1002/bimj.201800174" class="uri">https://doi.org/10.1002/bimj.201800174</a></p>
+<p>Scrucca L. (2021) A fast and efficient Modal EM algorithm for Gaussian mixtures. <em>Statistical Analysis and Data Mining</em>, 14:4, 305–314. <a href="https://doi.org/10.1002/sam.11527" class="uri">https://doi.org/10.1002/sam.11527</a></p>
 </div>
 </div>
   </div>
