--- a/book/index.html
+++ b/book/index.html
@@ -74,10 +74,10 @@
 </div>
 
 <p>
-This is the website accompayning the book Model-Based Clustering, Classification and Density Estimation Using mclust in R by Luca Scrucca, Chris Fraley, T. Brendan Murphy, and Adrian E. Raftery, to be pubslihed by Chapman & Hall/CRC Press. 
+This is the website accompayning the book <b>Model-Based Clustering, Classification and Density Estimation Using mclust in R</b> by Luca Scrucca, Chris Fraley, T. Brendan Murphy, and Adrian E. Raftery, to be pubslihed by Chapman & Hall/CRC Press. 
+</p>
 <br>
 STAY TUNED
-</p>
 
 </div>
 
