--- a/book/index.html
+++ b/book/index.html
@@ -74,12 +74,15 @@
 </div>
 
 <p>
-This is the website accompayning the book <b>Model-Based Clustering, Classification and Density Estimation Using mclust in R</b> by Luca Scrucca, Chris Fraley, T. Brendan Murphy, and Adrian E. Raftery, to be pubslihed by Chapman & Hall/CRC Press. 
+This is the website accompayning the book <b>Model-Based Clustering, Classification and Density Estimation Using mclust in R</b> by Luca Scrucca, Chris Fraley, T. Brendan Murphy, and Adrian E. Raftery, to be published by Chapman & Hall/CRC Press on 2023. 
 </p>
+
 <br>
-STAY TUNED
+STAY TUNED !!
 
 </div>
+
+<br><br><br><br><br><br>
 
 <footer>
 <p>Website design by Luca Scrucca | Last modified: Sept 2022 </p>
