--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
       </ul>
       </li>
       </ul>
+      <ul class="nav navbar-nav">
+      <li>
+      <a href="./book">Book</a>
+      </li>
+      </ul>
       <ul class="nav navbar-nav navbar-right">
       <li>
       <a href="https://www.r-project.org">
