--- a/mclustAddons/index.html
+++ b/mclustAddons/index.html
@@ -80,7 +80,12 @@
 <div class="page-header"><h1 id="mclustaddons">mclustAddons<a class="anchor" aria-label="anchor" href="#mclustaddons"></a>
 </h1></div>
 
-<p>An <a href="https://www.r-project.org/" class="external-link">R</a> package extending the functionality of the <a href="https://mclust-org.github.io/mclust/index.html" class="external-link">mclust</a> package (Scrucca et al. 2016) by including: - density estimation for data with bounded support using a transform-based approach to Gaussian mixture density estimation; - modal clustering using modal EM algorithm for Gaussian mixtures.</p>
+<p>An <a href="https://www.r-project.org/" class="external-link">R</a> package extending the functionality of the <a href="https://mclust-org.github.io/mclust/index.html" class="external-link">mclust</a> package (Scrucca et al. 2016) by including:</p>
+<ul>
+<li><p>density estimation for data with bounded support using a transform-based approach to Gaussian mixture density estimation (Scrucca, 2019 <a href="doi:10.1002/bimj.201800174" class="uri">doi:10.1002/bimj.201800174</a>);</p></li>
+<li><p>modal clustering using modal EM algorithm for Gaussian mixtures (Scrucca, 2021 <a href="doi:10.1002/sam.11527" class="uri">doi:10.1002/sam.11527</a>);</p></li>
+<li><p>entropy estimation via Gaussian mixture modeling (Robin &amp; Scrucca, 2023 <a href="doi:10.1016/j.csda.2022.107582" class="uri">doi:10.1016/j.csda.2022.107582</a>).</p></li>
+</ul>
 <div class="section level2">
 <h2 id="installation">Installation<a class="anchor" aria-label="anchor" href="#installation"></a>
 </h2>
@@ -101,6 +106,7 @@
 <p>Scrucca L., Fop M., Murphy T. B. and Raftery A. E. (2016) mclust 5: clustering, classification and density estimation using Gaussian finite mixture models, <em>The R Journal</em>, 8/1, 205-233. <a href="https://doi.org/10.32614/RJ-2016-021" class="external-link uri">https://doi.org/10.32614/RJ-2016-021</a></p>
 <p>Scrucca L. (2019) A transformation-based approach to Gaussian mixture density estimation for bounded data, <em>Biometrical Journal</em>, 61:4, 873–888. <a href="https://doi.org/10.1002/bimj.201800174" class="external-link uri">https://doi.org/10.1002/bimj.201800174</a></p>
 <p>Scrucca L. (2021) A fast and efficient Modal EM algorithm for Gaussian mixtures. <em>Statistical Analysis and Data Mining</em>, 14:4, 305–314. <a href="https://doi.org/10.1002/sam.11527" class="external-link uri">https://doi.org/10.1002/sam.11527</a></p>
+<p>Robin S. and Scrucca L. (2023) Mixture-based estimation of entropy. <em>Computational Statistics &amp; Data Analysis</em>, 177, 107582. <a href="https://doi.org/10.1016/j.csda.2022.107582" class="external-link uri">https://doi.org/10.1016/j.csda.2022.107582</a></p>
 </div>
 </div>
   </div>
