--- a/mclustAddons/index.html
+++ b/mclustAddons/index.html
@@ -16,7 +16,7 @@
   Gaussian finite mixture modeling by including: 
   density estimation for data with bounded support 
   (Scrucca, 2019 &lt;doi:10.1002/bimj.201800174&gt;);
-  modal clustering using MEM algorithm for Gaussian mixtures 
+  modal clustering using MEM (Modal EM) algorithm for Gaussian mixtures 
   (Scrucca, 2021 &lt;doi:10.1002/sam.11527&gt;);
   entropy estimation via Gaussian mixture modeling
   (Robin &amp; Scrucca, 2023 &lt;doi:10.1016/j.csda.2022.107582&gt;).">
@@ -40,7 +40,7 @@
       </button>
       <span class="navbar-brand">
         <a class="navbar-link" href="index.html">mclustAddons</a>
-        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="">0.7.1</span>
+        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="">0.7.2</span>
       </span>
     </div>
 
