Update book webpage

--- a/book/index_20220929.html
+++ b/book/index_20220929.html
@@ -73,23 +73,27 @@
 </h1>
 </div>
 
-<div class="container-fluid">
-<div class="col-md-3">
-<p><img src="book_cover.jpg" style="width:100.0%" /></p>
+<p>
+This is the website accompayning the book <b>Model-Based Clustering, Classification and Density Estimation Using mclust in R</b> by Luca Scrucca, Chris Fraley, T. Brendan Murphy, and Adrian E. Raftery, to be published by Chapman & Hall/CRC Press on 2023. 
+</p>
+
+<br>
+STAY TUNED !!
+
 </div>
-<div class="col-md-9">
-<p>This is the website accompanying the book <strong>Model-Based
-Clustering, Classification and Density Estimation Using mclust in
-R</strong> by Luca Scrucca, Chris Fraley, T. Brendan Murphy, and Adrian
-E. Raftery, to be published by Chapman &amp; Hall/CRC Press on 2023.</p>
-<p>STAY TUNED !!</p>
-</div>
-</div>
-	
+
+<br><br><br><br><br><br>
+
 <footer>
-<p>Website design by Luca Scrucca | Last modified: 16 March 2023 </p>
+<p>Website design by Luca Scrucca | Last modified: Sept 2022 </p>
 </footer>
 </div>
+
+<script type="text/javascript">
+	$(window).load(function() {
+		$('#slider').nivoSlider();
+	});
+</script>
 
 </body>
 </html>
