Update book webpage

--- a/book/index.html
+++ b/book/index.html
@@ -47,7 +47,6 @@
 
   <div class="container">
 
-<!--
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
@@ -60,20 +59,22 @@
         <a class="navbar-link" href="../index.html">mclust-org</a>
       </span>
     </div>
--->
-		
+    
+    <!--
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li> <a href="https://mclust-org.github.io" class="external-link">
-          <span class="fa fa-home"></span>&nbsp mclust-org</a>
+        <li> 
+        <a href="https://mclust-org.github.io" class="external-link">
+        <span class="fa fa-home"></span>&nbsp mclust-org</a>
         </li>
       </ul>
     </div>
-
-<!--/.container -->
+    -->
+      
   </div>
-<!--/.navbar -->
+  <!--/.container -->
 </div>
+<!--/.navbar -->
 </header>
 
 <div>
@@ -87,18 +88,79 @@
 <div class="container-fluid">
 <div class="col-md-3">
 <p><img src="book_cover.jpg" style="width:100.0%" /></p>
+<p><br></p>
+<h4 id="contents">Contents</h4>
+<p>List of Figures<br />
+List of Tables<br />
+List of Examples<br />
+Preface<br />
+1. Introduction<br />
+2. Finite Mixture Models<br />
+3. Model-based Clustering<br />
+4. Mixture-based Classification<br />
+5. Model-based Density Estimation<br />
+6. Visualizing Gaussian Mixture Models<br />
+7. Miscellanea<br />
+Bibliography<br />
+Index<br />
+</p>
 </div>
 <div class="col-md-9" style="font-size: 1.1em;">
 <p>This is the website accompanying the book <strong>Model-Based
 Clustering, Classification and Density Estimation Using mclust in
 R</strong> by Luca Scrucca, Chris Fraley, T. Brendan Murphy, and Adrian
 E. Raftery, to be published by Chapman &amp; Hall/CRC Press on 2023.</p>
-<p>STAY TUNED !!</p>
+<p>Model-based clustering and classification methods provide a
+systematic statistical approach to clustering, classification, and
+density estimation via mixture modeling. The model-based framework
+allows the problems of choosing or developing an appropriate clustering
+or classification method to be understood within the context of
+statistical modeling. The mclust package for the statistical environment
+R is a widely adopted platform implementing these model-based
+strategies. The package includes both summary and visual functionality,
+complementing procedures for estimating and choosing models.</p>
+<hr />
+<h4 id="r-scripts"><strong>R scripts</strong></h4>
+<p>R source code for all the chapters can be downloaded here  
+<a href="./scripts_mclust_book.R"><i class="far fa-file-code fa-lg"></i></a></p>
+<hr />
+<h4 id="errata"><strong>Errata</strong></h4>
+<hr />
+<p>The book is part of the
+<a href="https://www.routledge.com/Chapman--HallCRC-The-R-Series/book-series/CRCTHERSER" target="_blank">Chapman
+&amp; Hall/CRC The R Series</a> <!--
+and can be bought on most specialized bookshops and e-commerce websites.
+--> and is available for pre-order on specialized bookshops and
+e-commerce websites.</p>
+<table>
+<colgroup>
+<col style="width: 52%" />
+<col style="width: 47%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;"><img src="routledge.png" width="80%"></td>
+<td style="text-align: left;"><img src="amzn.png" width="80%"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"><strong>Chapman &amp; Hall/CRC
+website</strong></td>
+<td style="text-align: left;"><strong>E-commerce websites</strong></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><a
+href="http://www.routledge.com/9781032234953">Routledge Taylor &amp;
+Francis Group</a></td>
+<td style="text-align: left;"><a
+href="https://www.amazon.com/Model-Based-Clustering-Classification-Density-Estimation/dp/1032234962/ref=sr_1_1?crid=33QX1YSP3V11Y&amp;keywords=Model-Based+Clustering%2C+Classification+and+Density+Estimation+Using+mclust+in+R&amp;qid=1679126673&amp;s=books&amp;sprefix=model-based+clustering%2C+classification+and+density+estimation+using+mclust+in+r+%2Cstripbooks-intl-ship%2C332&amp;sr=1-1">Amazon</a></td>
+</tr>
+</tbody>
+</table>
 </div>
 </div>
 	
 <footer>
-<p>Website design by Luca Scrucca | Last modified: 16 March 2023 </p>
+<p>Website design by Luca Scrucca | Last modified: 18 March 2023 </p>
 </footer>
 </div>
 
