--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
 
   <div class="container">
+		
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
@@ -55,6 +56,7 @@
       <span class="navbar-brand">
         <a class="navbar-link" href="https://mclust-org.github.io">
         <span class="fa fa-home"></span>&nbsp mclust-org</a>
+			</span>
     </div>
 
     <div id="navbar" class="navbar-collapse collapse">
@@ -88,6 +90,7 @@
       <a href="./book/index.html">Book</a>
       </li>
       </ul>
+			<!--
       <ul class="nav navbar-nav navbar-right">
       <li>
       <a href="https://www.r-project.org">
@@ -95,11 +98,13 @@
       </a>
       </li>
       </ul>
-    </div>
-<!--/.container -->
+			-->
+		</div>
+			
+	</div>
+	<!--/.container -->
 </div>
 <!--/.navbar -->
-</div>
 </header>
 
 <div>
@@ -111,7 +116,7 @@
 </div>
 
 <p>
-A repository of <a href="https://www.r-project.org/">R</a> packages for statistical clustering, classification, and density estimation, using Gaussian finite mixture models.
+A repository of <a href="https://www.r-project.org/">R</a> packages for statistical model-based clustering, classification, and density estimation, using Gaussian finite mixture models.
 </p>
 
 <div class="slider-wrapper">
