--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
 
 <div class="page-header">
 <h1>
-  <strong>Gaussian mixtures in R</strong>
+  <strong>A collection of R packages for statistical modeling using Gaussian mixtures</strong>
 </h1>
 </div>
 
 <p>
-A repository of <a href="https://www.r-project.org/">R</a> packages for statistical model-based clustering, classification, and density estimation, using Gaussian finite mixture models.
+This site provides information on <a href="https://www.r-project.org/">R</a> packages for statistical model-based clustering, classification, and density estimation, using Gaussian finite mixture models.<br>
 </p>
 
 <div class="slider-wrapper">
