Update book webpage

--- a/book/index.html
+++ b/book/index.html
@@ -88,6 +88,8 @@
 <div class="container-fluid">
 <div class="col-md-3">
 <p><img src="book_cover.jpg" style="width:100.0%" /></p>
+<p>ISBN: 978-1032234953<br />
+eBook ISBN: 978-1003277965</p>
 <p><br></p>
 <h4 id="contents">Contents</h4>
 <p>List of Figures<br />
@@ -112,7 +114,7 @@ R</strong> by Luca Scrucca, Chris Fraley, T. Brendan Murphy, and Adrian
 E. Raftery, to be published by Chapman &amp; Hall/CRC Press on 2023.</p>
 <p>Model-based clustering and classification methods provide a
 systematic statistical approach to clustering, classification, and
-density estimation via mixture modeling. The model-based framework
+density estimation via mixture modeling. This model-based framework
 allows the problems of choosing or developing an appropriate clustering
 or classification method to be understood within the context of
 statistical modeling. The mclust package for the statistical environment
@@ -125,7 +127,9 @@ complementing procedures for estimating and choosing models.</p>
 <a href="./scripts_mclust_book.R"><i class="far fa-file-code fa-lg"></i></a></p>
 <hr />
 <h4 id="errata"><strong>Errata</strong></h4>
+<p>None so far.</p>
 <hr />
+<h4 id="get-the-book"><strong>Get the book</strong></h4>
 <p>The book is part of the
 <a href="https://www.routledge.com/Chapman--HallCRC-The-R-Series/book-series/CRCTHERSER" target="_blank">Chapman
 &amp; Hall/CRC The R Series</a> <!--
@@ -156,11 +160,13 @@ href="https://www.amazon.com/Model-Based-Clustering-Classification-Density-Estim
 </tr>
 </tbody>
 </table>
+<p><br></p>
+<p><img src="routledge-banner.jpg" style="width:50.0%" /></p>
 </div>
 </div>
 	
 <footer>
-<p>Website design by Luca Scrucca | Last modified: 18 March 2023 </p>
+<p>Website design by Luca Scrucca | Last modified: 21 March 2023 </p>
 </footer>
 </div>
 
