Update book webpage

--- a/book/index.html
+++ b/book/index.html
@@ -111,7 +111,7 @@ Index<br />
 <p>This is the website accompanying the book <strong>Model-Based
 Clustering, Classification and Density Estimation Using mclust in
 R</strong> by Luca Scrucca, Chris Fraley, T. Brendan Murphy, and Adrian
-E. Raftery, to be published by Chapman &amp; Hall/CRC Press on 2023.</p>
+E. Raftery, published by Chapman &amp; Hall/CRC Press on 2023.</p>
 <p>Model-based clustering and classification methods provide a
 systematic statistical approach to clustering, classification, and
 density estimation via mixture modeling. This model-based framework
@@ -161,12 +161,14 @@ href="https://www.amazon.com/Model-Based-Clustering-Classification-Density-Estim
 </tbody>
 </table>
 <p><br></p>
-<p><img src="routledge-banner.jpg" style="width:50.0%" /></p>
+<!--
+![](routledge-banner.jpg){width="50%"}
+-->
 </div>
 </div>
 	
 <footer>
-<p>Website design by Luca Scrucca | Last modified: 21 March 2023 </p>
+<p>Website design by Luca Scrucca | Last modified: 19 July 2023 </p>
 </footer>
 </div>
 
