--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
           </li> 
           <li class="nav-item" >
-            <a class="nav-link" href="./book/index.html" style="background-color: #212121;">Book</a>
+            <a class="nav-link" href="./mclust-book/index.html" style="background-color: #212121;">Book</a>
           </li>
         </ul>
       </div>
@@ -164,7 +164,7 @@
 <footer>
   <div class="pkgdown-footer-left">
     <p></p>
-    <p>Website design by Luca Scrucca | Last modified: May 2024 </p>
+    <p>Website design by Luca Scrucca | Last modified: May 2025 </p>
   </div>
 </footer>
 </div>
