--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
           </li> 
           <li class="nav-item" >
-            <a class="nav-link" href="./mclust-book/index.html" style="background-color: #212121;">Book</a>
+            <a class="nav-link" href="./mclust-book/index.html" target="_blank" style="background-color: #212121;">Book</a>
           </li>
         </ul>
       </div>
